RESOLVED FIXED36276
CSS3 :not selector with ID simple selector sequence test fails
https://bugs.webkit.org/show_bug.cgi?id=36276
Summary CSS3 :not selector with ID simple selector sequence test fails
Simon Fraser (smfr)
Reported 2010-03-17 20:21:39 PDT
Attachments
Fix bug: :not() must not accept simple selector sequence. (6.13 KB, patch)
2010-04-01 05:20 PDT, Yuzo Fujishima
no flags
Second trial. Now all tests, including svg ones, passes. (6.49 KB, patch)
2010-04-02 00:32 PDT, Yuzo Fujishima
darin: review+
Yuzo Fujishima
Comment 1 2010-04-01 05:20:42 PDT
Created attachment 52287 [details] Fix bug: :not() must not accept simple selector sequence.
Dave Hyatt
Comment 2 2010-04-01 11:15:34 PDT
Comment on attachment 52287 [details] Fix bug: :not() must not accept simple selector sequence. Please rename numCondition to numConditions. r=me
Yuzo Fujishima
Comment 3 2010-04-01 18:37:55 PDT
WebKit Review Bot
Comment 4 2010-04-01 19:14:47 PDT
http://trac.webkit.org/changeset/56959 might have broken Leopard Intel Release (Tests)
Kent Tamura
Comment 5 2010-04-01 20:13:16 PDT
Rolled r56959 our.
Kent Tamura
Comment 6 2010-04-01 20:13:54 PDT
(In reply to comment #5) > Rolled r56959 our. our -> out :-)
Simon Fraser (smfr)
Comment 7 2010-04-01 22:04:37 PDT
Which tests failed?
Kent Tamura
Comment 8 2010-04-01 22:09:55 PDT
(In reply to comment #7) > Which tests failed? http://build.webkit.org/builders/Leopard%20Intel%20Release%20%28Tests%29/builds/12483/steps/layout-test/logs/stdio http://build.webkit.org/builders/Leopard%20Intel%20Debug%20%28Tests%29/builds/12307/steps/layout-test/logs/stdio svg/W3C-SVG-1.1/coords-units-01-b.svg -> failed svg/W3C-SVG-1.1/pservers-pattern-01-b.svg -> failed svg/batik/paints/patternPreserveAspectRatioA.svg -> failed svg/batik/paints/patternRegionA.svg -> failed svg/batik/paints/patternRegions.svg -> failed svg/custom/deep-dynamic-updates.svg -> failed svg/custom/pattern-cycle-detection.svg -> failed svg/custom/pattern-deep-referencing.svg -> failed svg/custom/pattern-with-transformation.svg -> failed svg/custom/pattern-y-offset.svg -> failed svg/custom/use-on-symbol-inside-pattern.svg -> failed
Yuzo Fujishima
Comment 9 2010-04-02 00:32:24 PDT
Created attachment 52396 [details] Second trial. Now all tests, including svg ones, passes.
Yuzo Fujishima
Comment 10 2010-04-02 00:41:40 PDT
Sorry for the test breakage. CSSSelector::hasTag() behaves differently from my expectation if namespace is set. Fixed bool CSSSelector::isSimple() const accordingly. The second patch passes all tests. Can you take another look?
Yuzo Fujishima
Comment 11 2010-04-06 11:56:46 PDT
Yuzo Fujishima
Comment 12 2010-04-08 15:06:06 PDT
Yuzo Fujishima
Comment 13 2010-04-08 15:10:44 PDT
r57161 contains the main part of the change. r57295 contains the test accidentally dropped from r57161. Sorry for the mistake.
Yuzo Fujishima
Comment 14 2010-04-08 15:19:10 PDT
Yuzo Fujishima
Comment 15 2010-04-08 15:22:57 PDT
Sorry again. (Now I know why the files were dropped.) r57161 contains the main part of the change. r57295 almost empty r57298 contains the test accidentally dropped from r57161.
Note You need to log in before you can comment on or make changes to this bug.