WebCore/css/CSSSelector.h
@@ -223,6 +223,7 @@ namespace WebCore {
 
         bool isLastInSelectorList() const { return m_isLastInSelectorList; }
         void setLastInSelectorList() { m_isLastInSelectorList = true; }
+        bool isSimple() const;
 
         mutable AtomicString m_value;
         QualifiedName m_tag;
